@@ -9,6 +9,7 @@ Did:
     -Split colours from theme into separate file + function
     -Make colours providable to other composables in the tree using CompositionLocalProvider
     -Make MainMenuSub component, to hold different sub menus that are displayable on the main menu
+    -Add transparency to ImageButton component, make the day part menu buttons slightly transparent
 
 06-04-2024
 Streak: 14
